2021-06-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-compose-hash.el: new file.

	* eev-blinks.el (ee-hashtable-to-string, find-ehashtable): new
	functions.

2021-05-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (find-pdf-page): make it an alias to
	`find-xpdf-page'. Also, the comments in "eev-pdflike.el" now say
	that the recommened a way to change the default viewer is with a
	`defalias'; before this change the recommended way was with a
	`code-pdfbackend', that was much harder to understand.

	* eev-rcirc.el (ee-libera-server, ee-libera-ichannels)
	(ee-libera-achannels): new variables.
	(find-libera, find-libera-2a, find-libera-3a, eepitch-libera): new
	functions.

	* eev-intro.el (find-rcirc-intro): use LiberaChat insted of
	Freenode.

	* eev-tla.el: new file.

2021-05-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-insert): use `characterp' instead of
	`char-valid-p'.

2021-05-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-goto-position, ee-goto-rest): added a comment
	about curved single quotes.

2021-05-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-audiovideo.el (find-eevvlinksvideo): new function.
	(find-eevtestblocksvideo): renamed to `find-eevtestblsvideo'.

	* eev-intro.el (find-refining-intro, find-here-links-intro): added
	several "[Video links:]" blocks.

	* eev-hydras.el: new file.

2021-05-09  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-psnevideo-download-if-needed): renamed to
	`ee-psne-if-needed'.
	(ee-psnevideo-download): renamed to `ee-psne-download'.
	(ee-psnevideo-download0): renamed to `ee-psne-download0'.
	(ee-psnevideo-links): rewritten.

	* eev-template0.el (ee-template00): added a `save-match-data'.

2021-05-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-beginner.el: rewrote the comments.

	* eev-intro.el (find-pdf-like-intro): rewrote the section 12 and
	renamed it to "12. Other ways to generate `code-pdf'-pairs".
