@@ -1,3 +1,9 @@
+2021-06-08  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-blinks.el (ee-struct-class, ee-struct-slot-names)
+	(ee-struct-slot-names+, ee-struct-index-table)
+	(ee-struct-to-string, find-estruct): new functions.
+
 2021-06-07  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-compose-hash.el: new file.
